fix: maturity wrap on mobile

--- a/src/style/base.css
+++ b/src/style/base.css
@@ -196,6 +196,10 @@ main {
   text-transform: uppercase;
 }
 
+.wrap {
+  flex-wrap: wrap;
+}
+
 input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
